Work in Progress added

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
 <body>
     <div id="hero">
-        <h5>Hello I'm</h5>
-        <h1>Martin Gandon</h1>
+        <h5>Hello</h5>
+        <h1>Martin Gandon - WORK IN PROGRESS!</h1>
         <p>Engineering Student at Université de Technologie de Troyes</p>
         <!-- Block, Element, modifier naming convention, because we are in the div hero -->
         <div id="hero__animation">
