Feature top right corner

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
 <body>
     <div id="hero">
-        <h5>Hello</h5>
-        <h1>Martin Gandon - WORK IN PROGRESS!</h1>
-        <p>Engineering Student at Université de Technologie de Troyes</p>
+        <h5>Hello I'm</h5>
+        <h1>Martin Gandon <br>WORK IN PROGRESS!</h1>
+        <p>Engineering Student at UTT</p>
         <!-- Block, Element, modifier naming convention, because we are in the div hero -->
         <div id="hero__animation">
             <div id="hero__animation__img"></div>
@@ -34,7 +34,7 @@
                         <article>
                             <img src="./assets/icons/experience.png" alt="Experience icon" class="icon">
                             <h2>Experience</h2>
-                            <p>4ème année ISI <br> 2e experience <br> 3e experience </p>
+                            <p>4ème année ISI <br /> 2e experience <br /> 3e experience </p>
                         </article>
                         <p class="cards__content__text">
                             Lorem ipsum dolor sit amet consectetur.
@@ -50,6 +50,30 @@
                             Lorem ipsum dolor sit amet consectetur.
                         </p>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div id="grid__tr">
+            <div id="grid__tr__btn">Experience</div>
+            <div id="grid__tr__content">
+                <div class="cards experience">
+                    <article class="experience__skill">
+                        <h2>Frontend Devlopment</h2>
+                        <div>
+                            <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
+                            <div>
+                                <h2>HTML</h2>
+                                <p>Intermediate</p>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
+                            <div>
+                                <h2>CSS</h2>
+                                <p>Intermediate</p>
+                            </div>
+                        </div>
+                    </article>
                 </div>
             </div>
         </div>
