--- a/index.html
+++ b/index.html
@@ -73,7 +73,98 @@
                                 <p>Intermediate</p>
                             </div>
                         </div>
+                        <div>
+                            <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
+                            <div>
+                                <h2>JavaScript</h2>
+                                <p>Intermediate</p>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
+                            <div>
+                                <h2>PHP</h2>
+                                <p>Intermediate</p>
+                            </div>
+                        </div>
                     </article>
+                    <article class="experience__skill">
+                        <h2>Backend Devlopment</h2>
+                        <div>
+                            <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
+                            <div>
+                                <h2>HTML</h2>
+                                <p>Intermediate</p>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
+                            <div>
+                                <h2>CSS</h2>
+                                <p>Intermediate</p>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
+                            <div>
+                                <h2>JavaScript</h2>
+                                <p>Intermediate</p>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
+                            <div>
+                                <h2>PHP</h2>
+                                <p>Intermediate</p>
+                            </div>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </div>
+        <div id="grid__bl">
+            <div id="grid__bl__btn">Projects</div>
+            <div id="grid__bl__content">
+                <div id="grid__bl__content__projects">
+                    <div class="project p-1">
+                        <img class="project__img project-1" src="assets/portfolio-projects/project-1-dark.png"
+                            alt="Project 1">
+                        <h2 class="project__title">Project One</h2>
+                        <button class="btn" onclick="window.location.href='https://google.com'">
+                            Demo
+                        </button>
+                        <button class="btn" onclick="window.location.href='https://github.com'">
+                            Github
+                        </button>
+                    </div>
+                    <div class="project p-2">
+                        <img class="project__img project-2" src="assets/portfolio-projects/project-2-dark.png"
+                            alt="Project 2">
+                        <h2 class="project__title">Project Two</h2>
+                        <button class="btn" onclick="window.location.href='https://google.com'">
+                            Demo
+                        </button>
+                        <button class="btn" onclick="window.location.href='https://github.com'">
+                            Github
+                        </button>
+                    </div>
+                    <div class="project p-3">
+                        <img class="project__img project-3" src="assets/portfolio-projects/project-3-dark.png"
+                            alt="Project 3">
+                        <h2 class="project__title">Project Three</h2>
+                        <button class="btn" onclick="window.location.href='https://google.com'">
+                            Demo
+                        </button>
+                        <button class="btn" onclick="window.location.href='https://github.com'">
+                            Github
+                        </button>
+                    </div>
+                    <button class="arrow" onclick="navigateProject(-1)">
+                        &#10094;
+                    </button>
+                    <button class="arrow" onclick="navigateProject(1)">
+                        &#10095;
+                    </button>
                 </div>
             </div>
         </div>
