--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 
 <body>
     <div id="hero">
+        <h1>WORK IN PROGRESS!<br></h1>
         <h5>Hello I'm</h5>
-        <h1>Martin Gandon <br>WORK IN PROGRESS!</h1>
+        <h1>Martin Gandon</h1>
         <p>Engineering Student at UTT</p>
         <!-- Block, Element, modifier naming convention, because we are in the div hero -->
         <div id="hero__animation">
@@ -165,6 +166,19 @@
                     <button class="arrow" onclick="navigateProject(1)">
                         &#10095;
                     </button>
+                </div>
+            </div>
+        </div>
+        <div id="grid_br">
+            <div id="grid__br__btn">Contact</div>
+            <div id="grid__br__content">
+                <h5 class="contact-text">Get in Touch</h5>
+                <h2 class="contact-text">Contact me</h2>
+                <div>
+                    <button class="btn btn-contact"
+                        onclick="window.location.href='mailto:martin.gandon@utt.fr'">Email</button>
+                    <button class="btn btn-contact"
+                        onclick="window.location.href='https://www.linkedin.com/in/martingandon/'">LinkedIn</button>
                 </div>
             </div>
         </div>
