--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 </head>
 
 <body>
-    <div id="hero">
-        <h1>WORK IN PROGRESS!<br></h1>
+    <div id="hero">S
         <h5>Hello I'm</h5>
         <h1>Martin Gandon</h1>
         <p>Engineering Student at UTT</p>
