--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <div id="hero">S
+    <div id="hero">
         <h5>Hello I'm</h5>
         <h1>Martin Gandon</h1>
         <p>Engineering Student at UTT</p>
@@ -34,7 +34,8 @@
                         <article>
                             <img src="./assets/icons/experience.png" alt="Experience icon" class="icon">
                             <h2>Experience</h2>
-                            <p>4ème année ISI <br /> 2e experience <br /> 3e experience </p>
+                            <p>SFMC Consultant & Developer Intern at <b>Capgemini DCX</b>
+                            </p>
                         </article>
                         <p class="cards__content__text">
                             Lorem ipsum dolor sit amet consectetur.
@@ -44,7 +45,7 @@
                         <article>
                             <img src="./assets/icons/education.png" alt="Education icon" class="icon">
                             <h2>Education</h2>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
+                            <p>Computer Science & Information System Engineering</p>
                         </article>
                         <p class="cards__content__text">
                             Lorem ipsum dolor sit amet consectetur.
@@ -90,6 +91,65 @@
                     </article>
                     <article class="experience__skill">
                         <h2>Backend Devlopment</h2>
+                        <div>
+                            <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
+                            <div>
+                                <h2>HTML</h2>
+                                <p>Intermediate</p>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
+                            <div>
+                                <h2>CSS</h2>
+                                <p>Intermediate</p>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
+                            <div>
+                                <h2>JavaScript</h2>
+                                <p>Intermediate</p>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
+                            <div>
+                                <h2>PHP</h2>
+                                <p>Intermediate</p>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="experience__skill">
+                        <h2>Others</h2>
+                        <div>
+                            <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
+                            <div>
+                                <h2>HTML</h2>
+                                <p>Intermediate</p>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
+                            <div>
+                                <h2>CSS</h2>
+                                <p>Intermediate</p>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
+                            <div>
+                                <h2>JavaScript</h2>
+                                <p>Intermediate</p>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
+                            <div>
+                                <h2>PHP</h2>
+                                <p>Intermediate</p>
+                            </div>
+                        </div>
                         <div>
                             <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
                             <div>
