--- a/index.html
+++ b/index.html
@@ -63,14 +63,7 @@
                         <div>
                             <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
                             <div>
-                                <h2>HTML</h2>
-                                <p>Intermediate</p>
-                            </div>
-                        </div>
-                        <div>
-                            <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
-                            <div>
-                                <h2>CSS</h2>
+                                <h2>HTML/CSS</h2>
                                 <p>Intermediate</p>
                             </div>
                         </div>
@@ -84,7 +77,7 @@
                         <div>
                             <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
                             <div>
-                                <h2>PHP</h2>
+                                <h2>React</h2>
                                 <p>Intermediate</p>
                             </div>
                         </div>
@@ -94,21 +87,14 @@
                         <div>
                             <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
                             <div>
-                                <h2>HTML</h2>
+                                <h2>SQL/NoSQL</h2>
                                 <p>Intermediate</p>
                             </div>
                         </div>
                         <div>
                             <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
                             <div>
-                                <h2>CSS</h2>
-                                <p>Intermediate</p>
-                            </div>
-                        </div>
-                        <div>
-                            <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
-                            <div>
-                                <h2>JavaScript</h2>
+                                <h2>Java</h2>
                                 <p>Intermediate</p>
                             </div>
                         </div>
@@ -121,39 +107,32 @@
                         </div>
                     </article>
                     <article class="experience__skill">
-                        <h2>Others</h2>
+                        <h2>Softwares</h2>
                         <div>
                             <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
                             <div>
-                                <h2>HTML</h2>
-                                <p>Intermediate</p>
+                                <h2>AWS/Docker</h2>
+                                <p>Beginner</p>
                             </div>
                         </div>
                         <div>
                             <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
                             <div>
-                                <h2>CSS</h2>
-                                <p>Intermediate</p>
+                                <h2>VSCode<br>Jetbrains<br>Git/Github</h2>
+                                <p>Expert</p>
                             </div>
                         </div>
                         <div>
                             <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
                             <div>
-                                <h2>JavaScript</h2>
-                                <p>Intermediate</p>
+                                <h2>Salesforce Marketing Cloud</h2>
+                                <p>Expert</p>
                             </div>
                         </div>
                         <div>
                             <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
                             <div>
-                                <h2>PHP</h2>
-                                <p>Intermediate</p>
-                            </div>
-                        </div>
-                        <div>
-                            <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
-                            <div>
-                                <h2>HTML</h2>
+                                <h2>Oracle<br>Tableau</h2>
                                 <p>Intermediate</p>
                             </div>
                         </div>
@@ -168,11 +147,12 @@
                     <div class="project p-1">
                         <img class="project__img project-1" src="assets/portfolio-projects/project-1-dark.png"
                             alt="Project 1">
-                        <h2 class="project__title">Project One</h2>
-                        <button class="btn" onclick="window.location.href='https://google.com'">
+                        <h2 class="project__title">Project One-This Portfolio</h2>
+                        <button class="btn" onclick="window.location.href='https://nitram35.github.io/'">
                             Demo
                         </button>
-                        <button class="btn" onclick="window.location.href='https://github.com'">
+                        <button class="btn"
+                            onclick="window.location.href='https://github.com/nitram35/nitram35.github.io'">
                             Github
                         </button>
                     </div>
