--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     <div class="project p-1">
                         <img class="project__img project-1" src="assets/portfolio-projects/project-1-dark.png"
                             alt="Project 1">
-                        <h2 class="project__title">Project One-This Portfolio</h2>
+                        <h2 class="project__title">This Portfolio</h2>
                         <button class="btn" onclick="window.location.href='https://nitram35.github.io/'">
                             Demo
                         </button>
@@ -195,6 +195,8 @@
                 <div>
                     <button class="btn btn-contact"
                         onclick="window.location.href='mailto:martin.gandon@utt.fr'">Email</button>
+                    <button class="btn btn-contact"
+                        onclick="window.location.href='https://www.linkedin.com/in/martingandon/'">LinkedIn</button>
                     <button class="btn btn-contact"
                         onclick="window.location.href='https://www.linkedin.com/in/martingandon/'">LinkedIn</button>
                 </div>
