--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                             </p>
                         </article>
                         <p class="cards__content__text">
-                            Lorem ipsum dolor sit amet consectetur.
+                            <b>Maintenance</b> and <b>developments</b> on the <b>SFMC</b> platform for <i>SNCF
+                                Gares&Connexions</i>.
                         </p>
                     </div>
                     <div class="cards__content">
@@ -48,7 +49,7 @@
                             <p>Computer Science & Information System Engineering</p>
                         </article>
                         <p class="cards__content__text">
-                            Lorem ipsum dolor sit amet consectetur.
+                            Student at Université de Technologie de Troyes (UTT) - France, 2022-2025
                         </p>
                     </div>
                 </div>
@@ -78,7 +79,7 @@
                             <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
                             <div>
                                 <h2>React</h2>
-                                <p>Intermediate</p>
+                                <p>Beginner</p>
                             </div>
                         </div>
                     </article>
@@ -101,8 +102,8 @@
                         <div>
                             <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
                             <div>
-                                <h2>PHP</h2>
-                                <p>Intermediate</p>
+                                <h2>Node.js</h2>
+                                <p>Beginner</p>
                             </div>
                         </div>
                     </article>
@@ -195,8 +196,6 @@
                 <div>
                     <button class="btn btn-contact"
                         onclick="window.location.href='mailto:martin.gandon@utt.fr'">Email</button>
-                    <button class="btn btn-contact"
-                        onclick="window.location.href='https://www.linkedin.com/in/martingandon/'">LinkedIn</button>
                     <button class="btn btn-contact"
                         onclick="window.location.href='https://www.linkedin.com/in/martingandon/'">LinkedIn</button>
                 </div>
