Contact link open in new tab

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="/js/animation.js" defer></script>
     <script src="/js/color-mode.js" defer></script>
     <script src="/js/project-slideshow.js" defer></script>
+    <script src="/js/contact.js" defer></script>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/animations.css">
     <link rel="stylesheet" href="/css/color-mode.css">
@@ -194,10 +195,8 @@
                 <h5 class="contact-text">Get in Touch</h5>
                 <h2 class="contact-text">Contact me</h2>
                 <div>
-                    <button class="btn btn-contact"
-                        onclick="window.location.href='mailto:martin.gandon@utt.fr'">Email</button>
-                    <button class="btn btn-contact"
-                        onclick="window.location.href='https://www.linkedin.com/in/martingandon/'">LinkedIn</button>
+                    <button class="btn btn-contact" onclick="sendEmail()">Email</button>
+                    <button class="btn btn-contact" onclick="openLinkedIn()">LinkedIn</button>
                 </div>
             </div>
         </div>
