--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="/js/animation.js" defer></script>
     <script src="/js/color-mode.js" defer></script>
     <script src="/js/project-slideshow.js" defer></script>
-    <script src="/js/contact.js" defer></script>
+    <script src="/js/link.js" defer></script>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/animations.css">
     <link rel="stylesheet" href="/css/color-mode.css">
@@ -150,15 +150,15 @@
                         <img class="project__img project-1" src="assets/portfolio-projects/project-1-dark.png"
                             alt="Project 1">
                         <h2 class="project__title">This Portfolio</h2>
-                        <button class="btn" onclick="window.location.href='https://nitram35.github.io/'">
+                        <button class="btn" onclick="project1Demo()">
                             Demo
                         </button>
-                        <button class="btn"
-                            onclick="window.location.href='https://github.com/nitram35/nitram35.github.io'">
+                        <button class="btn" onclick="openGitHub()">
                             Github
                         </button>
+
                     </div>
-                    <div class="project p-2">
+                    <!-- <div class="project p-2">
                         <img class="project__img project-2" src="assets/portfolio-projects/project-2-dark.png"
                             alt="Project 2">
                         <h2 class="project__title">Project Two</h2>
@@ -179,7 +179,7 @@
                         <button class="btn" onclick="window.location.href='https://github.com'">
                             Github
                         </button>
-                    </div>
+                    </div> -->
                     <button class="arrow" onclick="navigateProject(-1)">
                         &#10094;
                     </button>
