--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div id="grid__tr__content">
                 <div class="cards experience">
                     <article class="experience__skill">
-                        <h2>Frontend Devlopment</h2>
+                        <h2>Frontend Development</h2>
                         <div>
                             <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
                             <div>
@@ -85,7 +85,7 @@
                         </div>
                     </article>
                     <article class="experience__skill">
-                        <h2>Backend Devlopment</h2>
+                        <h2>Backend Development</h2>
                         <div>
                             <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
                             <div>
@@ -150,7 +150,7 @@
                         <img class="project__img project-1" src="assets/portfolio-projects/project-1-dark.png"
                             alt="Project 1">
                         <h2 class="project__title">This Portfolio</h2>
-                        <button class="btn" onclick="project1Demo()">
+                        <button class="btn" onclick="openPortfolioWebsite()">
                             Demo
                         </button>
                         <button class="btn" onclick="openGitHub()">
@@ -158,28 +158,28 @@
                         </button>
 
                     </div>
-                    <!-- <div class="project p-2">
+                    <div class="project p-2">
                         <img class="project__img project-2" src="assets/portfolio-projects/project-2-dark.png"
                             alt="Project 2">
-                        <h2 class="project__title">Project Two</h2>
-                        <button class="btn" onclick="window.location.href='https://google.com'">
-                            Demo
+                        <h2 class="project__title">Work In Progress</h2>
+                        <button class="btn" onclick="openPortfolioWebsite()">
+                            Still Working
                         </button>
-                        <button class="btn" onclick="window.location.href='https://github.com'">
+                        <button class="btn" onclick="openGitHub()">
                             Github
                         </button>
                     </div>
                     <div class="project p-3">
                         <img class="project__img project-3" src="assets/portfolio-projects/project-3-dark.png"
                             alt="Project 3">
-                        <h2 class="project__title">Project Three</h2>
-                        <button class="btn" onclick="window.location.href='https://google.com'">
-                            Demo
+                        <h2 class="project__title">Work In Progress</h2>
+                        <button class="btn" onclick="openPortfolioWebsite()">
+                            Still Working
                         </button>
-                        <button class="btn" onclick="window.location.href='https://github.com'">
+                        <button class="btn" onclick="openGitHub()">
                             Github
                         </button>
-                    </div> -->
+                    </div>
                     <button class="arrow" onclick="navigateProject(-1)">
                         &#10094;
                     </button>
