--- a/index.html
+++ b/index.html
@@ -61,31 +61,7 @@
             <div id="grid__tr__content">
                 <div class="cards experience">
                     <article class="experience__skill">
-                        <h2>Frontend Development</h2>
-                        <div>
-                            <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
-                            <div>
-                                <h2>HTML/CSS</h2>
-                                <p>Intermediate</p>
-                            </div>
-                        </div>
-                        <div>
-                            <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
-                            <div>
-                                <h2>JavaScript</h2>
-                                <p>Intermediate</p>
-                            </div>
-                        </div>
-                        <div>
-                            <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
-                            <div>
-                                <h2>React</h2>
-                                <p>Beginner</p>
-                            </div>
-                        </div>
-                    </article>
-                    <article class="experience__skill">
-                        <h2>Backend Development</h2>
+                        <h2>DATA</h2>
                         <div>
                             <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
                             <div>
@@ -96,8 +72,39 @@
                         <div>
                             <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
                             <div>
-                                <h2>Java</h2>
+                                <h2>Python<br>PySpark</h2>
                                 <p>Intermediate</p>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
+                            <div>
+                                <h2>DataBase Management</h2>
+                                <p>Intermediate</p>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
+                            <div>
+                                <h2>Pipeline</h2>
+                                <p>Beginner</p>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="experience__skill">
+                        <h2>Fullstack Development</h2>
+                        <div>
+                            <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
+                            <div>
+                                <h2>HTML/CSS/JS</h2>
+                                <p>Intermediate</p>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
+                            <div>
+                                <h2>React</h2>
+                                <p>Beginner</p>
                             </div>
                         </div>
                         <div>
@@ -113,8 +120,15 @@
                         <div>
                             <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
                             <div>
-                                <h2>AWS/Docker</h2>
-                                <p>Beginner</p>
+                                <h2>Tableau<br>ObservableJS</h2>
+                                <p>Intermediate</p>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
+                            <div>
+                                <h2>Docker</h2>
+                                <p>Intermediate</p>
                             </div>
                         </div>
                         <div>
@@ -122,20 +136,6 @@
                             <div>
                                 <h2>VSCode<br>Jetbrains<br>Git/Github</h2>
                                 <p>Expert</p>
-                            </div>
-                        </div>
-                        <div>
-                            <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
-                            <div>
-                                <h2>Salesforce Marketing Cloud</h2>
-                                <p>Expert</p>
-                            </div>
-                        </div>
-                        <div>
-                            <img src="./assets/icons/checkmark.png" alt="Checkmark icon" class="icon">
-                            <div>
-                                <h2>Oracle<br>Tableau</h2>
-                                <p>Intermediate</p>
                             </div>
                         </div>
                     </article>
