--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Martin Gandon Portfolio</title>
+    <title>Martin Gandon Portfolio !</title>
     <link rel="icon" type="image/x-icon" href="/assets/icons/favicon.ico">
     <!-- defer = load HTML first and then js -->
     <script src="/js/animation.js" defer></script>
